Added new method getResourcesWhereUserIsAdmin
- new method gets resources by vo where user is admin (or member of authorized group)
- the new method (including the old ones with the same name) was added to OpenAPI
